--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "grunt-contrib-clean": "0.x",
     "grunt-contrib-jasmine": "0.x",
     "grunt-jekyll": "0.x",
-    "grunt-umd": "2.3.x",
+    "grunt-umd": "~2.3.3",
     "grunt-express": "1.4.0",
-    "grunt-banner": "0.3.x",
-    "grunt-curl": "2.1.x",
-    "express": "~3.3.4"
+    "grunt-banner": "~0.3.1",
+    "grunt-curl": "~2.2.0",
+    "express": "~3.3.4",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-shell": "~1.1.2"
   }
 }
